Добавить в задачу дату старта и продолжительность, и доработать тесты