@@ -18,6 +18,8 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.List;
 
@@ -50,27 +52,27 @@ public final class FileBackedTaskManagerTest {
 
     @Test
     public void loadFromFileTest() throws IOException {
-        Task task1 = new Task("Задача №1", "Описание задачи №1");
+        Task task1 = new Task("Задача №1", "Описание задачи №1", LocalDateTime.now(), Duration.ofHours(8));
         taskManager.createTask(task1);
 
-        Task task2 = new Task("Задача №2", "Описание задачи №2");
+        Task task2 = new Task("Задача №2", "Описание задачи №2", LocalDateTime.now(), Duration.ofHours(8));
         taskManager.createTask(task2);
 
         Epic epic1 = new Epic("Эпик №1", "Описание эпика № 1");
         taskManager.createEpic(epic1);
 
-        SubTask subTask1 = new SubTask("Подзадача №1", "Описание подзадачи №1", epic1);
+        SubTask subTask1 = new SubTask("Подзадача №1", "Описание подзадачи №1", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask1);
         taskManager.createSubTask(subTask1);
 
-        SubTask subTask2 = new SubTask("Подзадача №2", "Описание подзадачи №2", epic1);
+        SubTask subTask2 = new SubTask("Подзадача №2", "Описание подзадачи №2", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask2);
         taskManager.createSubTask(subTask2);
 
         Epic epic2 = new Epic("Эпик №2", "Описание эпика № 2");
         taskManager.createEpic(epic2);
 
-        SubTask subTask3 = new SubTask("Подзадача №3", "Описание подзадачи №3", epic2);
+        SubTask subTask3 = new SubTask("Подзадача №3", "Описание подзадачи №3", LocalDateTime.now(), Duration.ofHours(8), epic2);
         epic2.addSubTask(subTask3);
         taskManager.createSubTask(subTask3);
 
@@ -88,13 +90,15 @@ public final class FileBackedTaskManagerTest {
 
     @Test
     public void createTaskTest() throws IOException {
-        Task task = new Task("Задача", "Описание задачи");
+        Task task = new Task("Задача", "Описание задачи", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task);
 
         List<String> lines = Files.readAllLines(this.storage.toPath(), StandardCharsets.UTF_8);
 
         Assertions.assertEquals(1, this.taskManager.getAllTasks().size());
-        Assertions.assertEquals(String.join(",", String.valueOf(task.getId()), TaskType.TASK.toString(), task.getName(), task.getStatus().toString(), task.getDescription()), lines.getFirst());
+        Assertions.assertTrue(task.getStartTime().isPresent());
+        Assertions.assertTrue(task.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(task.getId()), TaskType.TASK.toString(), task.getName(), task.getStatus().toString(), task.getDescription(), task.getStartTime().get().toString(), task.getDuration().get().toString()), lines.getFirst());
     }
 
     @Test
@@ -104,7 +108,7 @@ public final class FileBackedTaskManagerTest {
 
     @Test
     public void createTaskTwiceTest() {
-        Task task = new Task("Задача", "Описание задачи");
+        Task task = new Task("Задача", "Описание задачи", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task);
 
         Assertions.assertThrows(IllegalStateException.class, () -> this.taskManager.createTask(task));
@@ -112,7 +116,7 @@ public final class FileBackedTaskManagerTest {
 
     @Test
     public void createTaskWithInProgressStatusTest() {
-        Task task = new Task("Задача", "Описание задачи");
+        Task task = new Task("Задача", "Описание задачи", LocalDateTime.now(), Duration.ofHours(8));
         task.setStatus(TaskStatus.IN_PROGRESS);
 
         Assertions.assertThrows(IllegalStateException.class, () -> this.taskManager.createTask(task));
@@ -120,7 +124,7 @@ public final class FileBackedTaskManagerTest {
 
     @Test
     public void createTaskWithDoneStatusTest() {
-        Task task = new Task("Задача", "Описание задачи");
+        Task task = new Task("Задача", "Описание задачи", LocalDateTime.now(), Duration.ofHours(8));
         task.setStatus(TaskStatus.DONE);
 
         Assertions.assertThrows(IllegalStateException.class, () -> this.taskManager.createTask(task));
@@ -128,7 +132,7 @@ public final class FileBackedTaskManagerTest {
 
     @Test
     public void getTaskByIdTest() {
-        Task task = new Task("Задача", "Описание задачи");
+        Task task = new Task("Задача", "Описание задачи", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task);
 
         Assertions.assertEquals(task, this.taskManager.getTaskById(task.getId()));
@@ -141,26 +145,35 @@ public final class FileBackedTaskManagerTest {
 
     @Test
     public void getAllTasksTest() throws IOException {
-        Task task1 = new Task("Задача 1", "Описание задачи 1");
+        Task task1 = new Task("Задача 1", "Описание задачи 1", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task1);
 
-        Task task2 = new Task("Задача 2", "Описание задачи 2");
+        Task task2 = new Task("Задача 2", "Описание задачи 2", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task2);
 
-        Task task3 = new Task("Задача 3", "Описание задачи 3");
+        Task task3 = new Task("Задача 3", "Описание задачи 3", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task3);
 
         Assertions.assertEquals(3, this.taskManager.getAllTasks().size());
 
         List<String> lines = Files.readAllLines(this.storage.toPath(), StandardCharsets.UTF_8);
-        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(task2.getId()), TaskType.TASK.toString(), task2.getName(), task2.getStatus().toString(), task2.getDescription()), lines.get(1));
-        Assertions.assertEquals(String.join(",", String.valueOf(task3.getId()), TaskType.TASK.toString(), task3.getName(), task3.getStatus().toString(), task3.getDescription()), lines.get(2));
+
+        Assertions.assertTrue(task1.getStartTime().isPresent());
+        Assertions.assertTrue(task1.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription(), task1.getStartTime().get().toString(), task1.getDuration().get().toString()), lines.getFirst());
+
+        Assertions.assertTrue(task2.getStartTime().isPresent());
+        Assertions.assertTrue(task2.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(task2.getId()), TaskType.TASK.toString(), task2.getName(), task2.getStatus().toString(), task2.getDescription(), task2.getStartTime().get().toString(), task2.getDuration().get().toString()), lines.get(1));
+
+        Assertions.assertTrue(task3.getStartTime().isPresent());
+        Assertions.assertTrue(task3.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(task3.getId()), TaskType.TASK.toString(), task3.getName(), task3.getStatus().toString(), task3.getDescription(), task3.getStartTime().get().toString(), task3.getDuration().get().toString()), lines.get(2));
     }
 
     @Test
     public void updateTaskTest() throws IOException {
-        Task task = new Task("Задача", "Описание задачи");
+        Task task = new Task("Задача", "Описание задачи", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task);
 
         Task taskClone = task.clone();
@@ -171,7 +184,9 @@ public final class FileBackedTaskManagerTest {
         List<String> lines = Files.readAllLines(this.storage.toPath(), StandardCharsets.UTF_8);
 
         Assertions.assertEquals(TaskStatus.IN_PROGRESS, this.taskManager.getTaskById(task.getId()).getStatus());
-        Assertions.assertEquals(String.join(",", String.valueOf(taskClone.getId()), TaskType.TASK.toString(), taskClone.getName(), taskClone.getStatus().toString(), taskClone.getDescription()), lines.getFirst());
+        Assertions.assertTrue(taskClone.getStartTime().isPresent());
+        Assertions.assertTrue(taskClone.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(taskClone.getId()), TaskType.TASK.toString(), taskClone.getName(), taskClone.getStatus().toString(), taskClone.getDescription(), taskClone.getStartTime().get().toString(), taskClone.getDuration().get().toString()), lines.getFirst());
     }
 
     @Test
@@ -181,14 +196,14 @@ public final class FileBackedTaskManagerTest {
 
     @Test
     public void updateUnknownTaskTest() {
-        Task task = new Task("Задача", "Описание задачи");
+        Task task = new Task("Задача", "Описание задачи", LocalDateTime.now(), Duration.ofHours(8));
 
         Assertions.assertThrows(IllegalStateException.class, () -> this.taskManager.updateTask(task));
     }
 
     @Test
     public void removeTaskByIdTest() throws IOException {
-        Task task = new Task("Задача", "Описание задачи");
+        Task task = new Task("Задача", "Описание задачи", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task);
 
         Assertions.assertEquals(1, this.taskManager.getAllTasks().size());
@@ -208,13 +223,13 @@ public final class FileBackedTaskManagerTest {
 
     @Test
     public void removeAllTasksTest() throws IOException {
-        Task task1 = new Task("Задача 1", "Описание задачи 1");
+        Task task1 = new Task("Задача 1", "Описание задачи 1", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task1);
 
-        Task task2 = new Task("Задача 2", "Описание задачи 2");
+        Task task2 = new Task("Задача 2", "Описание задачи 2", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task2);
 
-        Task task3 = new Task("Задача 3", "Описание задачи 3");
+        Task task3 = new Task("Задача 3", "Описание задачи 3", LocalDateTime.now(), Duration.ofHours(8));
         this.taskManager.createTask(task3);
 
         Assertions.assertEquals(3, this.taskManager.getAllTasks().size());
@@ -232,7 +247,7 @@ public final class FileBackedTaskManagerTest {
         Epic epic = new Epic("Эпик", "Описание эпика");
         this.taskManager.createEpic(epic);
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
         epic.addSubTask(subTask);
 
         this.taskManager.createSubTask(subTask);
@@ -240,8 +255,12 @@ public final class FileBackedTaskManagerTest {
         List<String> lines = Files.readAllLines(this.storage.toPath(), StandardCharsets.UTF_8);
 
         Assertions.assertEquals(1, this.taskManager.getAllSubTasks().size());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic.getId()), TaskType.EPIC.toString(), epic.getName(), epic.getStatus().toString(), epic.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask.getId()), TaskType.SUBTASK.toString(), subTask.getName(), subTask.getStatus().toString(), subTask.getDescription(), String.valueOf(epic.getId())), lines.get(1));
+        Assertions.assertTrue(epic.getStartTime().isPresent());
+        Assertions.assertTrue(epic.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(epic.getId()), TaskType.EPIC.toString(), epic.getName(), epic.getStatus().toString(), epic.getDescription(), epic.getStartTime().get().toString(), epic.getDuration().get().toString()), lines.getFirst());
+        Assertions.assertTrue(subTask.getStartTime().isPresent());
+        Assertions.assertTrue(subTask.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask.getId()), TaskType.SUBTASK.toString(), subTask.getName(), subTask.getStatus().toString(), subTask.getDescription(), subTask.getStartTime().get().toString(), subTask.getDuration().get().toString(), String.valueOf(epic.getId())), lines.get(1));
     }
 
     @Test
@@ -254,7 +273,7 @@ public final class FileBackedTaskManagerTest {
         Epic epic = new Epic("Эпик", "Описание эпика");
         this.taskManager.createEpic(epic);
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
         epic.addSubTask(subTask);
 
         this.taskManager.createSubTask(subTask);
@@ -267,7 +286,7 @@ public final class FileBackedTaskManagerTest {
         Epic epic = new Epic("Эпик", "Описание эпика");
         this.taskManager.createEpic(epic);
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
         subTask.setStatus(TaskStatus.IN_PROGRESS);
 
         epic.addSubTask(subTask);
@@ -280,7 +299,7 @@ public final class FileBackedTaskManagerTest {
         Epic epic = new Epic("Эпик", "Описание эпика");
         this.taskManager.createEpic(epic);
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
         subTask.setStatus(TaskStatus.DONE);
 
         epic.addSubTask(subTask);
@@ -292,7 +311,7 @@ public final class FileBackedTaskManagerTest {
     public void createSubTaskWithoutCreatingEpicTest() {
         Epic epic = new Epic("Эпик", "Описание эпика");
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
         epic.addSubTask(subTask);
 
         Assertions.assertThrows(IllegalStateException.class, () -> this.taskManager.createSubTask(subTask));
@@ -303,7 +322,7 @@ public final class FileBackedTaskManagerTest {
         Epic epic = new Epic("Эпик", "Описание эпика");
         this.taskManager.createEpic(epic);
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
 
         Assertions.assertThrows(IllegalStateException.class, () -> this.taskManager.createSubTask(subTask));
     }
@@ -313,7 +332,7 @@ public final class FileBackedTaskManagerTest {
         Epic epic = new Epic("Эпик", "Описание эпика");
         this.taskManager.createEpic(epic);
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
         epic.addSubTask(subTask);
 
         this.taskManager.createSubTask(subTask);
@@ -331,39 +350,53 @@ public final class FileBackedTaskManagerTest {
         Epic epic1 = new Epic("Эпик 1", "Описание эпика 1");
         this.taskManager.createEpic(epic1);
 
-        SubTask subTask1 = new SubTask("Подзадача 1", "Описание подзадачи 1", epic1);
+        SubTask subTask1 = new SubTask("Подзадача 1", "Описание подзадачи 1", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask1);
         this.taskManager.createSubTask(subTask1);
 
-        SubTask subTask2 = new SubTask("Подзадача 2", "Описание подзадачи 2", epic1);
+        SubTask subTask2 = new SubTask("Подзадача 2", "Описание подзадачи 2", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask2);
         this.taskManager.createSubTask(subTask2);
 
-        SubTask subTask3 = new SubTask("Подзадача 3", "Описание подзадачи 3", epic1);
+        SubTask subTask3 = new SubTask("Подзадача 3", "Описание подзадачи 3", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask3);
         this.taskManager.createSubTask(subTask3);
 
         Epic epic2 = new Epic("Эпик 2", "Описание эпика 2");
         this.taskManager.createEpic(epic2);
 
-        SubTask subTask4 = new SubTask("Подзадача 4", "Описание подзадачи 4", epic2);
+        SubTask subTask4 = new SubTask("Подзадача 4", "Описание подзадачи 4", LocalDateTime.now(), Duration.ofHours(8), epic2);
         epic2.addSubTask(subTask4);
         this.taskManager.createSubTask(subTask4);
 
-        SubTask subTask5 = new SubTask("Подзадача 5", "Описание подзадачи 5", epic2);
+        SubTask subTask5 = new SubTask("Подзадача 5", "Описание подзадачи 5", LocalDateTime.now(), Duration.ofHours(8), epic2);
         epic2.addSubTask(subTask5);
         this.taskManager.createSubTask(subTask5);
 
         List<String> lines = Files.readAllLines(this.storage.toPath(), StandardCharsets.UTF_8);
 
         Assertions.assertArrayEquals(Arrays.asList(subTask1, subTask2, subTask3).toArray(), this.taskManager.getSubTasksByEpic(epic1).toArray());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription()), lines.get(1));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask1.getId()), TaskType.SUBTASK.toString(), subTask1.getName(), subTask1.getStatus().toString(), subTask1.getDescription(), String.valueOf(epic1.getId())), lines.get(2));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask2.getId()), TaskType.SUBTASK.toString(), subTask2.getName(), subTask2.getStatus().toString(), subTask2.getDescription(), String.valueOf(epic1.getId())), lines.get(3));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask3.getId()), TaskType.SUBTASK.toString(), subTask3.getName(), subTask3.getStatus().toString(), subTask3.getDescription(), String.valueOf(epic1.getId())), lines.get(4));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask4.getId()), TaskType.SUBTASK.toString(), subTask4.getName(), subTask4.getStatus().toString(), subTask4.getDescription(), String.valueOf(epic2.getId())), lines.get(5));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask5.getId()), TaskType.SUBTASK.toString(), subTask5.getName(), subTask5.getStatus().toString(), subTask5.getDescription(), String.valueOf(epic2.getId())), lines.get(6));
+        Assertions.assertTrue(epic1.getStartTime().isPresent());
+        Assertions.assertTrue(epic1.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription(), epic1.getStartTime().get().toString(), epic1.getDuration().get().toString()), lines.getFirst());
+        Assertions.assertTrue(epic2.getStartTime().isPresent());
+        Assertions.assertTrue(epic2.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription(), epic2.getStartTime().get().toString(), epic2.getDuration().get().toString()), lines.get(1));
+        Assertions.assertTrue(subTask1.getStartTime().isPresent());
+        Assertions.assertTrue(subTask1.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask1.getId()), TaskType.SUBTASK.toString(), subTask1.getName(), subTask1.getStatus().toString(), subTask1.getDescription(), subTask1.getStartTime().get().toString(), subTask1.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(2));
+        Assertions.assertTrue(subTask2.getStartTime().isPresent());
+        Assertions.assertTrue(subTask2.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask2.getId()), TaskType.SUBTASK.toString(), subTask2.getName(), subTask2.getStatus().toString(), subTask2.getDescription(), subTask2.getStartTime().get().toString(), subTask2.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(3));
+        Assertions.assertTrue(subTask3.getStartTime().isPresent());
+        Assertions.assertTrue(subTask3.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask3.getId()), TaskType.SUBTASK.toString(), subTask3.getName(), subTask3.getStatus().toString(), subTask3.getDescription(), subTask3.getStartTime().get().toString(), subTask3.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(4));
+        Assertions.assertTrue(subTask4.getStartTime().isPresent());
+        Assertions.assertTrue(subTask4.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask4.getId()), TaskType.SUBTASK.toString(), subTask4.getName(), subTask4.getStatus().toString(), subTask4.getDescription(), subTask4.getStartTime().get().toString(), subTask4.getDuration().get().toString(), String.valueOf(epic2.getId())), lines.get(5));
+        Assertions.assertTrue(subTask5.getStartTime().isPresent());
+        Assertions.assertTrue(subTask5.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask5.getId()), TaskType.SUBTASK.toString(), subTask5.getName(), subTask5.getStatus().toString(), subTask5.getDescription(), subTask5.getStartTime().get().toString(), subTask5.getDuration().get().toString(), String.valueOf(epic2.getId())), lines.get(6));
     }
 
     @Test
@@ -371,39 +404,53 @@ public final class FileBackedTaskManagerTest {
         Epic epic1 = new Epic("Эпик 1", "Описание эпика 1");
         this.taskManager.createEpic(epic1);
 
-        SubTask subTask1 = new SubTask("Подзадача 1", "Описание подзадачи 1", epic1);
+        SubTask subTask1 = new SubTask("Подзадача 1", "Описание подзадачи 1", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask1);
         this.taskManager.createSubTask(subTask1);
 
-        SubTask subTask2 = new SubTask("Подзадача 2", "Описание подзадачи 2", epic1);
+        SubTask subTask2 = new SubTask("Подзадача 2", "Описание подзадачи 2", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask2);
         this.taskManager.createSubTask(subTask2);
 
-        SubTask subTask3 = new SubTask("Подзадача 3", "Описание подзадачи 3", epic1);
+        SubTask subTask3 = new SubTask("Подзадача 3", "Описание подзадачи 3", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask3);
         this.taskManager.createSubTask(subTask3);
 
         Epic epic2 = new Epic("Эпик 2", "Описание эпика 2");
         this.taskManager.createEpic(epic2);
 
-        SubTask subTask4 = new SubTask("Подзадача 4", "Описание подзадачи 4", epic2);
+        SubTask subTask4 = new SubTask("Подзадача 4", "Описание подзадачи 4", LocalDateTime.now(), Duration.ofHours(8), epic2);
         epic2.addSubTask(subTask4);
         this.taskManager.createSubTask(subTask4);
 
-        SubTask subTask5 = new SubTask("Подзадача 5", "Описание подзадачи 5", epic2);
+        SubTask subTask5 = new SubTask("Подзадача 5", "Описание подзадачи 5", LocalDateTime.now(), Duration.ofHours(8), epic2);
         epic2.addSubTask(subTask5);
         this.taskManager.createSubTask(subTask5);
 
         List<String> lines = Files.readAllLines(this.storage.toPath(), StandardCharsets.UTF_8);
 
         Assertions.assertArrayEquals(Arrays.asList(subTask1, subTask2, subTask3, subTask4, subTask5).toArray(), this.taskManager.getAllSubTasks().toArray());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription()), lines.get(1));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask1.getId()), TaskType.SUBTASK.toString(), subTask1.getName(), subTask1.getStatus().toString(), subTask1.getDescription(), String.valueOf(epic1.getId())), lines.get(2));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask2.getId()), TaskType.SUBTASK.toString(), subTask2.getName(), subTask2.getStatus().toString(), subTask2.getDescription(), String.valueOf(epic1.getId())), lines.get(3));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask3.getId()), TaskType.SUBTASK.toString(), subTask3.getName(), subTask3.getStatus().toString(), subTask3.getDescription(), String.valueOf(epic1.getId())), lines.get(4));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask4.getId()), TaskType.SUBTASK.toString(), subTask4.getName(), subTask4.getStatus().toString(), subTask4.getDescription(), String.valueOf(epic2.getId())), lines.get(5));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask5.getId()), TaskType.SUBTASK.toString(), subTask5.getName(), subTask5.getStatus().toString(), subTask5.getDescription(), String.valueOf(epic2.getId())), lines.get(6));
+        Assertions.assertTrue(epic1.getStartTime().isPresent());
+        Assertions.assertTrue(epic1.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription(), epic1.getStartTime().get().toString(), epic1.getDuration().get().toString()), lines.getFirst());
+        Assertions.assertTrue(epic2.getStartTime().isPresent());
+        Assertions.assertTrue(epic2.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription(), epic2.getStartTime().get().toString(), epic2.getDuration().get().toString()), lines.get(1));
+        Assertions.assertTrue(subTask1.getStartTime().isPresent());
+        Assertions.assertTrue(subTask1.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask1.getId()), TaskType.SUBTASK.toString(), subTask1.getName(), subTask1.getStatus().toString(), subTask1.getDescription(), subTask1.getStartTime().get().toString(), subTask1.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(2));
+        Assertions.assertTrue(subTask2.getStartTime().isPresent());
+        Assertions.assertTrue(subTask2.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask2.getId()), TaskType.SUBTASK.toString(), subTask2.getName(), subTask2.getStatus().toString(), subTask2.getDescription(), subTask2.getStartTime().get().toString(), subTask2.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(3));
+        Assertions.assertTrue(subTask3.getStartTime().isPresent());
+        Assertions.assertTrue(subTask3.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask3.getId()), TaskType.SUBTASK.toString(), subTask3.getName(), subTask3.getStatus().toString(), subTask3.getDescription(), subTask3.getStartTime().get().toString(), subTask3.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(4));
+        Assertions.assertTrue(subTask4.getStartTime().isPresent());
+        Assertions.assertTrue(subTask4.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask4.getId()), TaskType.SUBTASK.toString(), subTask4.getName(), subTask4.getStatus().toString(), subTask4.getDescription(), subTask4.getStartTime().get().toString(), subTask4.getDuration().get().toString(), String.valueOf(epic2.getId())), lines.get(5));
+        Assertions.assertTrue(subTask5.getStartTime().isPresent());
+        Assertions.assertTrue(subTask5.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask5.getId()), TaskType.SUBTASK.toString(), subTask5.getName(), subTask5.getStatus().toString(), subTask5.getDescription(), subTask5.getStartTime().get().toString(), subTask5.getDuration().get().toString(), String.valueOf(epic2.getId())), lines.get(6));
     }
 
     @Test
@@ -411,7 +458,7 @@ public final class FileBackedTaskManagerTest {
         Epic epic = new Epic("Эпик", "Описание эпика");
         this.taskManager.createEpic(epic);
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
         epic.addSubTask(subTask);
 
         this.taskManager.createSubTask(subTask);
@@ -428,8 +475,13 @@ public final class FileBackedTaskManagerTest {
 
         Assertions.assertEquals(TaskStatus.IN_PROGRESS, this.taskManager.getEpicById(epic.getId()).getStatus());
 
-        Assertions.assertEquals(String.join(",", String.valueOf(epic.getId()), TaskType.EPIC.toString(), epic.getName(), epic.getStatus().toString(), epic.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTaskClone.getId()), TaskType.SUBTASK.toString(), subTaskClone.getName(), subTaskClone.getStatus().toString(), subTaskClone.getDescription(), String.valueOf(epic.getId())), lines.get(1));
+        Assertions.assertTrue(epic.getStartTime().isPresent());
+        Assertions.assertTrue(epic.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(epic.getId()), TaskType.EPIC.toString(), epic.getName(), epic.getStatus().toString(), epic.getDescription(), epic.getStartTime().get().toString(), epic.getDuration().get().toString()), lines.getFirst());
+
+        Assertions.assertTrue(subTaskClone.getStartTime().isPresent());
+        Assertions.assertTrue(subTaskClone.getDuration().isPresent());
+        Assertions.assertEquals(String.join(",", String.valueOf(subTaskClone.getId()), TaskType.SUBTASK.toString(), subTaskClone.getName(), subTaskClone.getStatus().toString(), subTaskClone.getDescription(), subTaskClone.getStartTime().get().toString(), subTaskClone.getDuration().get().toString(), String.valueOf(epic.getId())), lines.get(1));
     }
 
     @Test
@@ -442,7 +494,7 @@ public final class FileBackedTaskManagerTest {
         Epic epic = new Epic("Эпик", "Описание эпика");
         this.taskManager.createEpic(epic);
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
 
         Assertions.assertThrows(IllegalStateException.class, () -> this.taskManager.updateSubTask(subTask));
     }
@@ -452,7 +504,7 @@ public final class FileBackedTaskManagerTest {
         Epic epic = new Epic("Эпик", "Описание эпика");
         this.taskManager.createEpic(epic);
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
         epic.addSubTask(subTask);
 
         this.taskManager.createSubTask(subTask);
@@ -462,7 +514,7 @@ public final class FileBackedTaskManagerTest {
 
         Assertions.assertEquals(0, this.taskManager.getAllSubTasks().size());
         Assertions.assertEquals(0, this.taskManager.getEpicById(epic.getId()).getAllSubTasks().size());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic.getId()), TaskType.EPIC.toString(), epic.getName(), epic.getStatus().toString(), epic.getDescription()), lines.getFirst());
+        Assertions.assertEquals(String.join(",", String.valueOf(epic.getId()), TaskType.EPIC.toString(), epic.getName(), epic.getStatus().toString(), epic.getDescription(), null, null), lines.getFirst());
     }
 
     @Test
@@ -475,26 +527,26 @@ public final class FileBackedTaskManagerTest {
         Epic epic1 = new Epic("Эпик 1", "Описание эпика 1");
         this.taskManager.createEpic(epic1);
 
-        SubTask subTask1 = new SubTask("Подзадача 1", "Описание подзадачи 1", epic1);
+        SubTask subTask1 = new SubTask("Подзадача 1", "Описание подзадачи 1", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask1);
         this.taskManager.createSubTask(subTask1);
 
-        SubTask subTask2 = new SubTask("Подзадача 2", "Описание подзадачи 2", epic1);
+        SubTask subTask2 = new SubTask("Подзадача 2", "Описание подзадачи 2", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask2);
         this.taskManager.createSubTask(subTask2);
 
-        SubTask subTask3 = new SubTask("Подзадача 3", "Описание подзадачи 3", epic1);
+        SubTask subTask3 = new SubTask("Подзадача 3", "Описание подзадачи 3", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask3);
         this.taskManager.createSubTask(subTask3);
 
         Epic epic2 = new Epic("Эпик 2", "Описание эпика 2");
         this.taskManager.createEpic(epic2);
 
-        SubTask subTask4 = new SubTask("Подзадача 4", "Описание подзадачи 4", epic2);
+        SubTask subTask4 = new SubTask("Подзадача 4", "Описание подзадачи 4", LocalDateTime.now(), Duration.ofHours(8), epic2);
         epic2.addSubTask(subTask4);
         this.taskManager.createSubTask(subTask4);
 
-        SubTask subTask5 = new SubTask("Подзадача 5", "Описание подзадачи 5", epic2);
+        SubTask subTask5 = new SubTask("Подзадача 5", "Описание подзадачи 5", LocalDateTime.now(), Duration.ofHours(8), epic2);
         epic2.addSubTask(subTask5);
         this.taskManager.createSubTask(subTask5);
 
@@ -505,8 +557,8 @@ public final class FileBackedTaskManagerTest {
         Assertions.assertEquals(0, this.taskManager.getAllSubTasks().size());
         Assertions.assertEquals(0, this.taskManager.getEpicById(epic1.getId()).getAllSubTasks().size());
         Assertions.assertEquals(0, this.taskManager.getEpicById(epic2.getId()).getAllSubTasks().size());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription()), lines.get(1));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription(), null, null), lines.get(0));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription(), null, null), lines.get(1));
     }
 
     @Test
@@ -517,7 +569,7 @@ public final class FileBackedTaskManagerTest {
         List<String> lines = Files.readAllLines(this.storage.toPath(), StandardCharsets.UTF_8);
 
         Assertions.assertEquals(1, this.taskManager.getAllEpics().size());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic.getId()), TaskType.EPIC.toString(), epic.getName(), epic.getStatus().toString(), epic.getDescription()), lines.getFirst());
+        Assertions.assertEquals(String.join(",", String.valueOf(epic.getId()), TaskType.EPIC.toString(), epic.getName(), epic.getStatus().toString(), epic.getDescription(), null, null), lines.getFirst());
     }
 
     @Test
@@ -576,9 +628,9 @@ public final class FileBackedTaskManagerTest {
         List<String> lines = Files.readAllLines(this.storage.toPath(), StandardCharsets.UTF_8);
 
         Assertions.assertEquals(3, this.taskManager.getAllEpics().size());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription()), lines.get(1));
-        Assertions.assertEquals(String.join(",", String.valueOf(epic3.getId()), TaskType.EPIC.toString(), epic3.getName(), epic3.getStatus().toString(), epic3.getDescription()), lines.get(2));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription(), null, null), lines.get(0));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription(), null, null), lines.get(1));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic3.getId()), TaskType.EPIC.toString(), epic3.getName(), epic3.getStatus().toString(), epic3.getDescription(), null, null), lines.get(2));
     }
 
     @Test
@@ -590,7 +642,7 @@ public final class FileBackedTaskManagerTest {
         this.taskManager.updateEpic(epicClone);
 
         List<String> lines = Files.readAllLines(this.storage.toPath(), StandardCharsets.UTF_8);
-        Assertions.assertEquals(String.join(",", String.valueOf(epic.getId()), TaskType.EPIC.toString(), epic.getName(), epic.getStatus().toString(), epic.getDescription()), lines.getFirst());
+        Assertions.assertEquals(String.join(",", String.valueOf(epic.getId()), TaskType.EPIC.toString(), epic.getName(), epic.getStatus().toString(), epic.getDescription(), null, null), lines.getFirst());
     }
 
     @Test
@@ -610,7 +662,7 @@ public final class FileBackedTaskManagerTest {
         Epic epic = new Epic("Эпик", "Описание эпика");
         this.taskManager.createEpic(epic);
 
-        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", epic);
+        SubTask subTask = new SubTask("Подзадача", "Описание подзадачи", LocalDateTime.now(), Duration.ofHours(8), epic);
         epic.addSubTask(subTask);
 
         this.taskManager.createSubTask(subTask);
@@ -634,26 +686,26 @@ public final class FileBackedTaskManagerTest {
         Epic epic1 = new Epic("Эпик 1", "Описание эпика 1");
         this.taskManager.createEpic(epic1);
 
-        SubTask subTask1 = new SubTask("Подзадача 1", "Описание подзадачи 1", epic1);
+        SubTask subTask1 = new SubTask("Подзадача 1", "Описание подзадачи 1", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask1);
         this.taskManager.createSubTask(subTask1);
 
-        SubTask subTask2 = new SubTask("Подзадача 2", "Описание подзадачи 2", epic1);
+        SubTask subTask2 = new SubTask("Подзадача 2", "Описание подзадачи 2", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask2);
         this.taskManager.createSubTask(subTask2);
 
-        SubTask subTask3 = new SubTask("Подзадача 3", "Описание подзадачи 3", epic1);
+        SubTask subTask3 = new SubTask("Подзадача 3", "Описание подзадачи 3", LocalDateTime.now(), Duration.ofHours(8), epic1);
         epic1.addSubTask(subTask3);
         this.taskManager.createSubTask(subTask3);
 
         Epic epic2 = new Epic("Эпик 2", "Описание эпика 2");
         this.taskManager.createEpic(epic2);
 
-        SubTask subTask4 = new SubTask("Подзадача 4", "Описание подзадачи 4", epic2);
+        SubTask subTask4 = new SubTask("Подзадача 4", "Описание подзадачи 4", LocalDateTime.now(), Duration.ofHours(8), epic2);
         epic2.addSubTask(subTask4);
         this.taskManager.createSubTask(subTask4);
 
-        SubTask subTask5 = new SubTask("Подзадача 5", "Описание подзадачи 5", epic2);
+        SubTask subTask5 = new SubTask("Подзадача 5", "Описание подзадачи 5", LocalDateTime.now(), Duration.ofHours(8), epic2);
         epic2.addSubTask(subTask5);
         this.taskManager.createSubTask(subTask5);
 
@@ -668,7 +720,10 @@ public final class FileBackedTaskManagerTest {
 
     @Test
     public void getHistoryTest() throws IOException {
-        Task task1 = new Task("Задача №1", "Описание задачи №1");
+        Task task1 = new Task("Задача №1", "Описание задачи №1", LocalDateTime.now(), Duration.ofHours(8));
+        Assertions.assertTrue(task1.getStartTime().isPresent());
+        Assertions.assertTrue(task1.getDuration().isPresent());
+
         taskManager.createTask(task1);
         taskManager.getTaskById(task1.getId());
 
@@ -676,9 +731,12 @@ public final class FileBackedTaskManagerTest {
 
         Assertions.assertEquals(1, this.taskManager.getHistory().size());
         Assertions.assertArrayEquals(List.of(task1).toArray(), this.taskManager.getHistory().toArray());
-        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription()), lines.getFirst());
+        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription(), task1.getStartTime().get().toString(), task1.getDuration().get().toString()), lines.getFirst());
 
-        Task task2 = new Task("Задача №2", "Описание задачи №2");
+        Task task2 = new Task("Задача №2", "Описание задачи №2", LocalDateTime.now(), Duration.ofHours(8));
+        Assertions.assertTrue(task2.getStartTime().isPresent());
+        Assertions.assertTrue(task2.getDuration().isPresent());
+
         taskManager.createTask(task2);
         taskManager.getTaskById(task2.getId());
 
@@ -686,8 +744,8 @@ public final class FileBackedTaskManagerTest {
 
         Assertions.assertEquals(2, this.taskManager.getHistory().size());
         Assertions.assertArrayEquals(Arrays.asList(task1, task2).toArray(), this.taskManager.getHistory().toArray());
-        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(task2.getId()), TaskType.TASK.toString(), task2.getName(), task2.getStatus().toString(), task2.getDescription()), lines.get(1));
+        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription(), task1.getStartTime().get().toString(), task1.getDuration().get().toString()), lines.get(0));
+        Assertions.assertEquals(String.join(",", String.valueOf(task2.getId()), TaskType.TASK.toString(), task2.getName(), task2.getStatus().toString(), task2.getDescription(), task2.getStartTime().get().toString(), task2.getDuration().get().toString()), lines.get(1));
 
         taskManager.getTaskById(task1.getId());
 
@@ -700,9 +758,12 @@ public final class FileBackedTaskManagerTest {
 
         Assertions.assertEquals(1, this.taskManager.getHistory().size());
         Assertions.assertArrayEquals(List.of(task1).toArray(), this.taskManager.getHistory().toArray());
-        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription()), lines.getFirst());
+        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription(), task1.getStartTime().get().toString(), task1.getDuration().get().toString()), lines.getFirst());
 
         Epic epic1 = new Epic("Эпик №1", "Описание эпика № 1");
+        Assertions.assertTrue(epic1.getStartTime().isEmpty());
+        Assertions.assertTrue(epic1.getDuration().isEmpty());
+
         taskManager.createEpic(epic1);
         taskManager.getEpicById(epic1.getId());
 
@@ -710,11 +771,17 @@ public final class FileBackedTaskManagerTest {
 
         Assertions.assertEquals(2, this.taskManager.getHistory().size());
         Assertions.assertArrayEquals(Arrays.asList(task1, epic1).toArray(), this.taskManager.getHistory().toArray());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription()), lines.get(1));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription(), null, null), lines.get(0));
+        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription(), task1.getStartTime().get().toString(), task1.getDuration().get().toString()), lines.get(1));
 
-        SubTask subTask1 = new SubTask("Подзадача №1", "Описание подзадачи №1", epic1);
+        SubTask subTask1 = new SubTask("Подзадача №1", "Описание подзадачи №1", LocalDateTime.now(), Duration.ofHours(8), epic1);
+        Assertions.assertTrue(subTask1.getStartTime().isPresent());
+        Assertions.assertTrue(subTask1.getDuration().isPresent());
+
         epic1.addSubTask(subTask1);
+        Assertions.assertTrue(epic1.getStartTime().isPresent());
+        Assertions.assertTrue(epic1.getDuration().isPresent());
+
         taskManager.createSubTask(subTask1);
         taskManager.getSubTaskById(subTask1.getId());
 
@@ -722,17 +789,23 @@ public final class FileBackedTaskManagerTest {
 
         Assertions.assertEquals(3, this.taskManager.getHistory().size());
         Assertions.assertArrayEquals(Arrays.asList(task1, epic1, subTask1).toArray(), this.taskManager.getHistory().toArray());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask1.getId()), TaskType.SUBTASK.toString(), subTask1.getName(), subTask1.getStatus().toString(), subTask1.getDescription(), String.valueOf(epic1.getId())), lines.get(1));
-        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription()), lines.get(2));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription(), epic1.getStartTime().get().toString(), epic1.getDuration().get().toString()), lines.get(0));
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask1.getId()), TaskType.SUBTASK.toString(), subTask1.getName(), subTask1.getStatus().toString(), subTask1.getDescription(), subTask1.getStartTime().get().toString(), subTask1.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(1));
+        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription(), task1.getStartTime().get().toString(), task1.getDuration().get().toString()), lines.get(2));
 
         taskManager.getEpicById(epic1.getId());
 
         Assertions.assertEquals(3, this.taskManager.getHistory().size());
         Assertions.assertArrayEquals(Arrays.asList(task1, subTask1, epic1).toArray(), this.taskManager.getHistory().toArray());
 
-        SubTask subTask2 = new SubTask("Подзадача №2", "Описание подзадачи №2", epic1);
+        SubTask subTask2 = new SubTask("Подзадача №2", "Описание подзадачи №2", LocalDateTime.now(), Duration.ofHours(8), epic1);
+        Assertions.assertTrue(subTask2.getStartTime().isPresent());
+        Assertions.assertTrue(subTask2.getDuration().isPresent());
+
         epic1.addSubTask(subTask2);
+        Assertions.assertTrue(epic1.getStartTime().isPresent());
+        Assertions.assertTrue(epic1.getDuration().isPresent());
+
         taskManager.createSubTask(subTask2);
         taskManager.getSubTaskById(subTask2.getId());
 
@@ -740,29 +813,41 @@ public final class FileBackedTaskManagerTest {
 
         Assertions.assertEquals(4, this.taskManager.getHistory().size());
         Assertions.assertArrayEquals(Arrays.asList(task1, subTask1, epic1, subTask2).toArray(), this.taskManager.getHistory().toArray());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask1.getId()), TaskType.SUBTASK.toString(), subTask1.getName(), subTask1.getStatus().toString(), subTask1.getDescription(), String.valueOf(epic1.getId())), lines.get(1));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask2.getId()), TaskType.SUBTASK.toString(), subTask2.getName(), subTask2.getStatus().toString(), subTask2.getDescription(), String.valueOf(epic1.getId())), lines.get(2));
-        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription()), lines.get(3));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription(), epic1.getStartTime().get().toString(), epic1.getDuration().get().toString()), lines.get(0));
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask1.getId()), TaskType.SUBTASK.toString(), subTask1.getName(), subTask1.getStatus().toString(), subTask1.getDescription(), subTask1.getStartTime().get().toString(), subTask1.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(1));
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask2.getId()), TaskType.SUBTASK.toString(), subTask2.getName(), subTask2.getStatus().toString(), subTask2.getDescription(), subTask2.getStartTime().get().toString(), subTask2.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(2));
+        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription(), task1.getStartTime().get().toString(), task1.getDuration().get().toString()), lines.get(3));
 
         Epic epic2 = new Epic("Эпик №2", "Описание эпика № 2");
+        Assertions.assertTrue(epic2.getStartTime().isEmpty());
+        Assertions.assertTrue(epic2.getDuration().isEmpty());
+
         taskManager.createEpic(epic2);
 
-        SubTask subTask3 = new SubTask("Подзадача №3", "Описание подзадачи №3", epic2);
+        SubTask subTask3 = new SubTask("Подзадача №3", "Описание подзадачи №3", LocalDateTime.now(), Duration.ofHours(8), epic2);
+        Assertions.assertTrue(subTask3.getStartTime().isPresent());
+        Assertions.assertTrue(subTask3.getDuration().isPresent());
+
         epic2.addSubTask(subTask3);
+        Assertions.assertTrue(epic2.getStartTime().isPresent());
+        Assertions.assertTrue(epic2.getDuration().isPresent());
+
         taskManager.createSubTask(subTask3);
         taskManager.getSubTaskById(subTask3.getId());
+
+        Assertions.assertTrue(subTask3.getStartTime().isPresent());
+        Assertions.assertTrue(subTask3.getDuration().isPresent());
 
         lines = Files.readAllLines(this.storage.toPath(), StandardCharsets.UTF_8);
 
         Assertions.assertEquals(5, this.taskManager.getHistory().size());
         Assertions.assertArrayEquals(Arrays.asList(task1, subTask1, epic1, subTask2, subTask3).toArray(), this.taskManager.getHistory().toArray());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription()), lines.get(1));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask1.getId()), TaskType.SUBTASK.toString(), subTask1.getName(), subTask1.getStatus().toString(), subTask1.getDescription(), String.valueOf(epic1.getId())), lines.get(2));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask2.getId()), TaskType.SUBTASK.toString(), subTask2.getName(), subTask2.getStatus().toString(), subTask2.getDescription(), String.valueOf(epic1.getId())), lines.get(3));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask3.getId()), TaskType.SUBTASK.toString(), subTask3.getName(), subTask3.getStatus().toString(), subTask3.getDescription(), String.valueOf(epic2.getId())), lines.get(4));
-        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription()), lines.get(5));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic1.getId()), TaskType.EPIC.toString(), epic1.getName(), epic1.getStatus().toString(), epic1.getDescription(), epic1.getStartTime().get().toString(), epic1.getDuration().get().toString()), lines.get(0));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription(), epic2.getStartTime().get().toString(), epic2.getDuration().get().toString()), lines.get(1));
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask1.getId()), TaskType.SUBTASK.toString(), subTask1.getName(), subTask1.getStatus().toString(), subTask1.getDescription(), subTask1.getStartTime().get().toString(), subTask1.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(2));
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask2.getId()), TaskType.SUBTASK.toString(), subTask2.getName(), subTask2.getStatus().toString(), subTask2.getDescription(), subTask2.getStartTime().get().toString(), subTask2.getDuration().get().toString(), String.valueOf(epic1.getId())), lines.get(3));
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask3.getId()), TaskType.SUBTASK.toString(), subTask3.getName(), subTask3.getStatus().toString(), subTask3.getDescription(), subTask3.getStartTime().get().toString(), subTask3.getDuration().get().toString(), String.valueOf(epic2.getId())), lines.get(4));
+        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription(), task1.getStartTime().get().toString(), task1.getDuration().get().toString()), lines.get(5));
 
         taskManager.removeEpicById(epic1.getId());
 
@@ -770,8 +855,8 @@ public final class FileBackedTaskManagerTest {
 
         Assertions.assertEquals(2, this.taskManager.getHistory().size());
         Assertions.assertArrayEquals(Arrays.asList(task1, subTask3).toArray(), this.taskManager.getHistory().toArray());
-        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription()), lines.get(0));
-        Assertions.assertEquals(String.join(",", String.valueOf(subTask3.getId()), TaskType.SUBTASK.toString(), subTask3.getName(), subTask3.getStatus().toString(), subTask3.getDescription(), String.valueOf(epic2.getId())), lines.get(1));
-        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription()), lines.get(2));
+        Assertions.assertEquals(String.join(",", String.valueOf(epic2.getId()), TaskType.EPIC.toString(), epic2.getName(), epic2.getStatus().toString(), epic2.getDescription(), epic2.getStartTime().get().toString(), epic2.getDuration().get().toString()), lines.get(0));
+        Assertions.assertEquals(String.join(",", String.valueOf(subTask3.getId()), TaskType.SUBTASK.toString(), subTask3.getName(), subTask3.getStatus().toString(), subTask3.getDescription(), subTask3.getStartTime().get().toString(), subTask3.getDuration().get().toString(), String.valueOf(epic2.getId())), lines.get(1));
+        Assertions.assertEquals(String.join(",", String.valueOf(task1.getId()), TaskType.TASK.toString(), task1.getName(), task1.getStatus().toString(), task1.getDescription(), task1.getStartTime().get().toString(), task1.getDuration().get().toString()), lines.get(2));
     }
 }
